# capture-device-info

./: .pre-commit-config.yaml  Cargo.toml  README.md
examples/: dshow.rs
src/: dshow.rs  lib.rs
