[package]
name = "capture-device-info"
description = "List information of capture devices."
version = "0.1.0"
edition = "2021"
authors = ["忘忧北萱草 <wybxc@qq.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
windows = { version = "0.43.0", optional = true, features = [
    "Win32_Foundation",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_Graphics_Gdi",
    "Win32_Media_MediaFoundation",
    "Win32_Media_DirectShow",
] }

[features]
dshow = ["windows"]

[[example]]
name = "dshow"
required-features = ["dshow"]
